--- a/css/style.css
+++ b/css/style.css
@@ -108,12 +108,22 @@ Carde section start
     width: 31.33%;
     margin-bottom: 50px;
     padding-bottom: 15px;
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px; 
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+    transition: 1s;
+
 } 
+.card:hover{
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
 .card-img img{
     width: 100%;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+
 }
 .course-heading{
     font-size: 30px;
@@ -142,6 +152,7 @@ Carde section start
    border: none;
    margin-bottom: 10px;
    font-size: 20px;
+   cursor: pointer;
    border-radius: 10px;
    box-shadow: rgb(38 57 85) 0px 12px 30px -10px;
    -webkit-border-radius: 10px;
@@ -182,8 +193,9 @@ Card offer section start
     justify-content: center;
     align-items: center;
     height: 100px;
-    background-color: bisque;
+    background-color: rgb(33,37,41);
 }
 .footer-container h2{
     font-size: 25px;
+    color: #fff;
 }
